...
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Latitude: " />

            <TextView
                android:id="@+id/lat_thing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="Latitude" />
        </LinearLayout>

...
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Longitude: " />

            <TextView
                android:id="@+id/long_thing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="Longitude" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/show_bark_pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp" />

            <ImageView
                android:id="@+id/show_leaf_pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp" />

            <ImageView
                android:id="@+id/show_tree_pic"
...
