<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/full_pic_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:padding="8dp"
        android:src="@drawable/icons8_multiply_30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/full_pic_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add Tree"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="Next>"
        android:background="@color/new_invented_color"
        android:textColor="@color/white"
        android:id="@+id/next_pic_full"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/skip_full_tree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:text="Skip"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="&lt;Back"
        android:textSize="25sp"
        android:id="@+id/back_full_pic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="visible"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Step 4: Entire Tree"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:textSize="32sp"/>


        <TextView
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:text="Please stand back to capture the entire tree in one photo. The shape of the tree and its branching pattern can often aid in identification."
            android:layout_marginBottom="15dp"
            android:textAlignment="center"
            android:textColor="@color/accent_gray"
            android:textSize="22sp"
            android:id="@+id/full_text"/>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:text="Take Picture"
            android:id="@+id/add_full_pic"
            android:textColor="@color/white"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:id="@+id/camera_appear_full"
                android:layout_gravity="center"
                android:visibility="gone" />

            <TextView
                android:id="@+id/camera_disappear_full"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/cerclebackground"
                android:gravity="center"
                android:text="X"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginTop="2dp"
                android:layout_marginStart="-62dp"
                android:visibility="gone" />
        </LinearLayout>

        <com.shivam.library.imageslider.ImageSlider
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:id="@+id/pager"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="&lt;Swipe to view other images&gt;"
            android:visibility="gone"
            android:textColor="@color/black"
            android:id="@+id/swipe_for_pics"
            android:textSize="14sp"/>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>