<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/leaf_pic_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:padding="8dp"
        android:src="@drawable/icons8_multiply_30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/leaf_pic_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add Tree"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="Next>"
        android:id="@+id/next_pic_leaf"
        android:textColor="@color/white"
        android:background="@color/new_invented_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="&lt;Back"
        android:id="@+id/back_leaf_pic"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/skip_leaf_tree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:text="Skip"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <LinearLayout
        android:id="@+id/relativeLayout2"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/leaf_text"
            android:layout_marginBottom="10dp"
            android:text="Step 3: Leaves"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="32sp"/>


        <TextView
            android:id="@+id/leaf_text"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="Please take a close-up phote of the leaves or needles. Make sure to include multiple leaves in the photo as well as any fruits, flowers, or other unique characteristics."
            android:layout_above="@+id/add_leaf_pic"
            android:layout_marginBottom="15dp"
            android:textAlignment="center"
            android:textColor="@color/accent_gray"
            android:textSize="22sp" />

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="Take Picture"
            android:background="@color/colorPrimaryDark"
            android:id="@+id/add_leaf_pic"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/add_leaf_pic"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true">

            <ImageView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:id="@+id/camera_appear_leaf"
                android:layout_gravity="center"
                android:visibility="gone" />

            <TextView
                android:id="@+id/camera_disappear_leaf"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/cerclebackground"
                android:gravity="center"
                android:text="X"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginTop="2dp"
                android:layout_marginStart="-62dp"
                android:visibility="gone" />


        </LinearLayout>

        <com.shivam.library.imageslider.ImageSlider
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/add_leaf_pic"
            android:layout_marginTop="10dp"
            android:id="@+id/pager"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pager"
            android:text="&lt;Swipe to view other images&gt;"
            android:visibility="gone"
            android:textColor="@color/black"
            android:id="@+id/swipe_for_pics"
            android:layout_centerHorizontal="true"
            android:textSize="14sp"/>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>